tests/transpiler/x/pl/nested_function.error
ERROR: /workspace/mochi/tests/transpiler/x/pl/nested_function.pl:1: Initialization goal raised exception:
ERROR: outer/2: Unknown procedure: inner/2
